--- a/llm.ipynb
+++ b/llm.ipynb
@@ -16,7 +16,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72c619a2df484449af9b11f4706c3ef5",
+       "model_id": "349ff9f78b7e422e95c2e7eb543815ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "f923b428-d5fb-4878-881a-318791453ce5",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97a8fb74ec64425eaaa48be14f81fa03",
+       "model_id": "cf1460af26244d6fb81ba44ddd59a417",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,25 +75,26 @@
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"mistralai/Mistral-7B-v0.1\")\n",
     "model = AutoModelForCausalLM.from_pretrained(\"mistralai/Mistral-7B-v0.1\")\n",
-    "model = model.to('cpu')"
+    "model = model.to('cpu')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6f07a5d2-4694-4463-a853-f36df03b3571",
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
     "\n",
+    "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"mistralai/Mistral-7B-v0.1\", padding_side=\"left\")\n",
-    "model_inputs = tokenizer([\"A list of colors: red, blue\"], return_tensors=\"pt\").to(\"cpu\")"
+    "model_inputs = tokenizer([\"Generate a promotional message for a shoes shop\"], return_tensors=\"pt\").to(\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "55ba95f1-2260-475c-8b3a-cade2613ceaf",
    "metadata": {},
    "outputs": [
@@ -107,10 +108,10 @@
     {
      "data": {
       "text/plain": [
-       "'A list of colors: red, blue, green, yellow, orange, purple, pink,'"
+       "'Generate a promotional message for a shoes shop.\\n\\n## Promotional message for a'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,14 +120,6 @@
     "generated_ids = model.generate(**model_inputs)\n",
     "tokenizer.batch_decode(generated_ids, skip_special_tokens=True)[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd92e6a0-d12c-4843-9f29-55760b60ac76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
