--- a/mistral-finetune-own-data-Copy1.ipynb
+++ b/mistral-finetune-own-data-Copy1.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Token has not been saved to git credential helper. Pass `add_to_git_credential=True` if you want to set the git credential as well.\n",
+      "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
       "Token is valid (permission: read).\n",
       "Your token has been saved to /usr/users/quota/students/2019/anguyen/.cache/huggingface/token\n",
       "Login successful\n"
@@ -281,9 +281,17 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/users/quota/students/2019/anguyen/miniconda3/envs/yap/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24e438240f674ca18654df38ebce7839",
+       "model_id": "441c75b6590345419c4e0452e6a5a5d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,6 +301,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/users/quota/students/2019/anguyen/miniconda3/envs/yap/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -619,11 +635,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/users/quota/students/2019/anguyen/miniconda3/envs/yap/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
       "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n",
-      "2024-05-05 17:09:06.176108: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-05-05 17:09:14.724761: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-05-07 18:22:43.519625: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-05-07 18:22:50.241980: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-05-05 17:09:24.520250: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-05-07 18:23:01.547037: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
@@ -1061,7 +1079,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='500' max='500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [500/500 13:09, Epoch 10/11]\n",
+       "      [500/500 10:00, Epoch 5/6]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1074,103 +1092,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>25</td>\n",
-       "      <td>1.988000</td>\n",
-       "      <td>0.958474</td>\n",
+       "      <td>2.101000</td>\n",
+       "      <td>1.004647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>50</td>\n",
-       "      <td>0.831200</td>\n",
-       "      <td>0.940988</td>\n",
+       "      <td>1.001900</td>\n",
+       "      <td>0.965151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>75</td>\n",
-       "      <td>0.547000</td>\n",
-       "      <td>1.115135</td>\n",
+       "      <td>0.845700</td>\n",
+       "      <td>1.012455</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>0.460600</td>\n",
-       "      <td>1.295510</td>\n",
+       "      <td>0.915400</td>\n",
+       "      <td>0.939848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>125</td>\n",
-       "      <td>0.416500</td>\n",
-       "      <td>1.260964</td>\n",
+       "      <td>0.496100</td>\n",
+       "      <td>1.078653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>150</td>\n",
-       "      <td>0.385700</td>\n",
-       "      <td>1.344203</td>\n",
+       "      <td>0.466500</td>\n",
+       "      <td>1.120850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>175</td>\n",
-       "      <td>0.340400</td>\n",
-       "      <td>1.431982</td>\n",
+       "      <td>0.501500</td>\n",
+       "      <td>1.219708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>200</td>\n",
-       "      <td>0.340000</td>\n",
-       "      <td>1.432538</td>\n",
+       "      <td>0.375500</td>\n",
+       "      <td>1.223771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>225</td>\n",
-       "      <td>0.341500</td>\n",
-       "      <td>1.467259</td>\n",
+       "      <td>0.394100</td>\n",
+       "      <td>1.273356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>250</td>\n",
-       "      <td>0.324000</td>\n",
-       "      <td>1.467090</td>\n",
+       "      <td>0.392000</td>\n",
+       "      <td>1.236503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>275</td>\n",
-       "      <td>0.330700</td>\n",
-       "      <td>1.521949</td>\n",
+       "      <td>0.379300</td>\n",
+       "      <td>1.273072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>300</td>\n",
-       "      <td>0.325300</td>\n",
-       "      <td>1.514887</td>\n",
+       "      <td>0.336700</td>\n",
+       "      <td>1.331100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>325</td>\n",
-       "      <td>0.308000</td>\n",
-       "      <td>1.559283</td>\n",
+       "      <td>0.321200</td>\n",
+       "      <td>1.404343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>350</td>\n",
-       "      <td>0.308200</td>\n",
-       "      <td>1.606401</td>\n",
+       "      <td>0.355500</td>\n",
+       "      <td>1.343465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>375</td>\n",
-       "      <td>0.328800</td>\n",
-       "      <td>1.582910</td>\n",
+       "      <td>0.338500</td>\n",
+       "      <td>1.344787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>400</td>\n",
-       "      <td>0.305400</td>\n",
-       "      <td>1.598707</td>\n",
+       "      <td>0.320200</td>\n",
+       "      <td>1.384219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>425</td>\n",
-       "      <td>0.315500</td>\n",
-       "      <td>1.606339</td>\n",
+       "      <td>0.318000</td>\n",
+       "      <td>1.405619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>450</td>\n",
-       "      <td>0.301300</td>\n",
-       "      <td>1.617613</td>\n",
+       "      <td>0.319500</td>\n",
+       "      <td>1.406375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>475</td>\n",
-       "      <td>0.309400</td>\n",
-       "      <td>1.622764</td>\n",
+       "      <td>0.309100</td>\n",
+       "      <td>1.405427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>500</td>\n",
-       "      <td>0.298700</td>\n",
-       "      <td>1.625594</td>\n",
+       "      <td>0.313400</td>\n",
+       "      <td>1.408300</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -1269,7 +1287,7 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=500, training_loss=0.45531530857086183, metrics={'train_runtime': 792.5907, 'train_samples_per_second': 1.262, 'train_steps_per_second': 0.631, 'total_flos': 8548493082624000.0, 'train_loss': 0.45531530857086183, 'epoch': 10.638297872340425})"
+       "TrainOutput(global_step=500, training_loss=0.5400516481399537, metrics={'train_runtime': 602.89, 'train_samples_per_second': 0.829, 'train_steps_per_second': 0.829, 'total_flos': 4317420748800000.0, 'train_loss': 0.5400516481399537, 'epoch': 5.376344086021505})"
       ]
      },
      "execution_count": 25,
@@ -1293,7 +1311,7 @@
     "    args=transformers.TrainingArguments(\n",
     "        output_dir=output_dir,\n",
     "        warmup_steps=1,\n",
-    "        per_device_train_batch_size=2,\n",
+    "        per_device_train_batch_size=1,\n",
     "        gradient_accumulation_steps=1,\n",
     "        gradient_checkpointing=True,\n",
     "        max_steps=500,\n",
@@ -1376,20 +1394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Unused kwargs: ['load_in_8bit_fp32_cpu_offload']. These kwargs are not used in <class 'transformers.utils.quantization_config.BitsAndBytesConfig'>.\n"
+      "Unused kwargs: ['load_in_8bit_fp32_cpu_offload']. These kwargs are not used in <class 'transformers.utils.quantization_config.BitsAndBytesConfig'>.\n",
+      "/usr/users/quota/students/2019/anguyen/miniconda3/envs/yap/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9bf642a39f9479c8e1ff25927b062d0",
+       "model_id": "48d6e263b21b4c01a13c878b8336bc36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1436,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {
     "id": "GwsiqhWuyRgp"
    },
@@ -1467,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {
     "id": "lMkVNEUvyRgp",
     "outputId": "7d49d409-5dbe-4306-c1a4-9d87e3073397"
@@ -1484,17 +1504,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Networking event with CS Alumni # 2?\n",
-      "occurred on Tuesday, 19 February 20 work- observers: 3\n",
+      " Networking event with CS Alumni Sam Taggart and in Cynthia Taylor?\n",
+      " just a sample event?\n",
       "\n",
-      "### Description of the Event\n",
+      "## Event Description\n",
       "\n",
-      "This is a networking event for students and gradu just graduated from our department. The goal is to give you the opportunity to meet some of our former students whoop just just just graduatedгоpsoreop def defoporeoporeoporeoporeoporeoporeoporeoporeoporeoporeoporeoporeoporeoporeopoporeoporeoporeoporeopoporeop just just ob ob def just just just just just justsc def just just just just just just just def just just justscsc just just def just just just def just just just justsc just just just defsc just just def just just other just just just just just just just def just just just def just just just just defsc just just just just other just just just just just justsc just just just just just just\n"
+      "Join the Computer Science Department for an informal networking event with our CS Alumni! This is a great opportunity to meet and network with successful CS graduates, learn about their career paths, and get advice on your own career journey. The event will feature a panel discussion with several CS Alumni, followed by a networking reception where you can connect with them one-on- offline.\n",
+      "\n",
+      " just a sample event?\n",
+      "\n",
+      "## Panelists:\n",
+      "\n",
+      " just a sample event?\n",
+      "enc said:\n",
+      "\n",
+      "## Event Speaker\n",
+      " just a sample event?\n",
+      "\n",
+      "## Career Fair?\n",
+      "\n",
+      " just a sample event?\n",
+      "encenc encenc encenc encenc encenc encenc encenc encenc encenc enc\n",
+      "encenc encenc encenc encenc encenc encenc encenc encenc encenc enc\n",
+      "encenc encenc encenc encenc encenc encenc encenc encenc\n"
      ]
     }
    ],
    "source": [
-    "eval_prompt = \" Networking event with CS Alumni # \"\n",
+    "eval_prompt = \" Networking event with CS Alumni \"\n",
     "model_input = eval_tokenizer(eval_prompt, return_tensors=\"pt\").to(\"cuda\")\n",
     "\n",
     "ft_model.eval()\n",
@@ -1518,6 +1555,13 @@
     "\n",
     "🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙 🤙"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
