Add final instruction for prompt helper generation

--- a/generate_assigned_portions.ipynb
+++ b/generate_assigned_portions.ipynb
@@ -5851,7 +5851,9 @@
    "metadata": {},
    "source": [
     "Each line in `prompts.txt` is a prompt that you can input in chatGPT/Bing.\n",
-    "Please check out `prompts.txt`."
+    "Please check out `prompts.txt`.\n",
+    "\n",
+    "For each output produced by chatGPT, please copy it into a file. Synthesize all outputs and then push to our repo!"
    ]
   }
  ],
